Removed all test documents and added Using GitLab with MarketPlace Sandbox document.

--- a/home/docstore/techguides/index.html
+++ b/home/docstore/techguides/index.html
@@ -68,7 +68,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="technical-guides-page">Technical Guides Page</h1>
 
-<p><a href="doclist/DevOpsBank_setup_with_T24SandBox%20v2.docx">DevOps - Bank Setup with T24 Sandbox</a><br><a href="doclist/CreatingPackage.docx">Create a Package from Design Studio</a><br><a href="doclist/DesignStudioT24-Workshop_GDV.docx">T24 Graphical Physical and Logical Viewer in Design Studio</a><br><a href="doclist/DS%20topologies.pdf">Design Studio Topologies</a>  </p>
+<p><a href="doclist/Using%20GitLab%20with%20MarketPlace%20Sandbox.docx">Using GitLab with MarketPlace Sandbox</a>  </p>
 </article>
           </div>
           
