--- a/docfx_project/site/home/docstore/index.html
+++ b/docfx_project/site/home/docstore/index.html
@@ -68,6 +68,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="document-store-page">Document Store Page</h1>
 
+<p>Here you can read and download featured technical user guides, giving the support to develop and test the integration of your application with Temenos components</p>
 </article>
           </div>
           
