--- a/index.html
+++ b/index.html
@@ -61,7 +61,14 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="welcome-to-temenos-documentation-portal">Welcome to <strong>Temenos Documentation Portal</strong>.</h1>
 
-<p>Refer to <a href="http://daringfireball.net/projects/markdown/">Markdown</a> for how to write markdown files.</p>
+<p><img src="images/docs.png" alt="portal documents"></p>
+<p>Our portal is designed to offer best support to all Fintechs partners, as we understand the need of a simplified and quick development solution to have a product implemented with Temenos system.
+You can find here technical and functional support through step-by-step guides, which you can also download. </p>
+<p>Please check following sections:</p>
+<ul>
+<li>Technical Guides</li>
+<li>Functional Guides</li>
+</ul>
 </article>
           </div>
           
