--- a/toc.html
+++ b/toc.html
@@ -72,7 +72,7 @@
           
           <ul class="nav level1">
             <li>
-              <a href="home/contactus/index.html" name="home/toc.html" title="Home">Home</a>
+              <a href="home/docstore/index.html" name="home/toc.html" title="Home">Home</a>
             </li>
           </ul>      </div>
     </div>
