--- a/docfx_project/site/home/toc.html
+++ b/docfx_project/site/home/toc.html
@@ -82,7 +82,10 @@
                       
                       <ul class="nav level3">
                         <li>
-                          <a href="docstore/techguides/configure-and-use-t24-in-cloud.html" name="" title="Use Gitlab Repository">Use Gitlab Repository</a>
+                          <a href="docstore/techguides/use-gitlab-repository.html" name="" title="Use Gitlab Repository">Use Gitlab Repository</a>
+                        </li>
+                        <li>
+                          <a href="docstore/techguides/configure-and-use-t24-in-cloud.html" name="" title="Configure and Use T24 in Cloud">Configure and Use T24 in Cloud</a>
                         </li>
                       </ul>  </li>
                 </ul>  </li>
