--- a/docfx_project/site/home/docstore/techguides/configure-and-use-t24-in-cloud.html
+++ b/docfx_project/site/home/docstore/techguides/configure-and-use-t24-in-cloud.html
@@ -74,7 +74,7 @@
 <li>Design Studio</li>
 <li>Temenos Sandbox</li>
 <li>Tortoise Git  - download from <a href="https://tortoisegit.org/download/" title="Tortoise">here</a></li>
-<li>GitLab Platform</li>
+<li>PAAS Configiration Repository</li>
 </ul>
 <h1 id="create-new-project">Create New Project</h1>
 <p>The package delivered by Temenos MarketPlace contains the following:</p>
@@ -279,7 +279,7 @@
 <li>You can also check <strong>build’s success</strong> here:</li>
 </ul>
 <p><img src="images/check-build-success.png" alt="check build success"></p>
-<h1 id="clone-gitlab-repository">Clone GitLab Repository</h1>
+<h1 id="clone-paas-configuration-repository">Clone PaaS Configuration Repository</h1>
 <ul>
 <li>Make sure you have installed TortoiseGit. </li>
 <li>Make sure you have received the <strong>ppk</strong> private key to open ssh</li>
