--- a/home/toc.html
+++ b/home/toc.html
@@ -87,6 +87,9 @@
                         <li>
                           <a href="docstore/techguides/configure-and-use-t24-in-cloud.html" name="" title="Configure and Use T24 in Cloud">Configure and Use T24 in Cloud</a>
                         </li>
+                        <li>
+                          <a href="docstore/techguides/troubleshooting.html" name="" title="Troubleshooting">Troubleshooting</a>
+                        </li>
                       </ul>  </li>
                 </ul>  </li>
           </ul>      </div>
