--- a/home/docstore/techguides/use-gitlab-repository.html
+++ b/home/docstore/techguides/use-gitlab-repository.html
@@ -69,52 +69,25 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="how-to-use-gitlab-repository-for-marketplace-sandbox">How to use GitLab Repository for MarketPlace Sandbox</h1>
 
-<h2 id="quick-start-guide">Quick Start Guide</h2>
 <h3 id="audience">Audience</h3>
 <p>This document can be used by technical staff who need to use GitLab repository to update files on the Temenos Sandbox provisioned through MarketPlace. Each Sandbox created has an associated GitLab Repository for uploading files, plugins, add-ons to the cloud environment (called Sandbox). The platform will perform the scripts and steps needed for the files to be deployed successfully as background activities. Before proceeding you need to know the associated GitLab repository and to have users with ssh keys created in the portal. </p>
-<h1 id="clone-the-repository-to-your-local-computer">Clone the Repository to your local computer</h1>
-<p>Before proceeding, please login to your organisation, find your environment then locate the <strong>Repository</strong> Application and Endpoint. Right click the endpoint and copy the link address or click the <strong>copy to clipboard icon</strong> from the right:</p>
+<h1 id="clone-the-gitlab-repository-of-your-sandbox-to-your-local-computer">Clone the GitLab Repository of your sandbox to your local computer</h1>
+<p>Before proceeding, please login to your organisation, select your environment and locate the Endpoint of <strong>Repository</strong> Application. Right click the endpoint and copy the link address or click the <strong>copy to clipboard icon</strong> from the right:</p>
 <p><img src="images/repository.png" alt="repository"></p>
-<p>•   Create a folder where do you want to store the repository files. Let’s call it “repo”.</p>
-<p>•   Go to Git Bash window. Change directory to the new created folder (“repo”). Type “cd /c/repo”, as below:</p>
-<p><img src="images/repo.png" alt="repo"></p>
-<p>•   Clone the Sandbox repository using the “git clone <url>” command, where <url> is the link copied above:<p>
-<p><img src="images/clone-repo.png" alt="clone repo"></p>
 <ul>
-<li>Content is downloaded from the GitLab Repository to your computer:</li>
+<li>Make sure you have installed TortoiseGit. Otherwise, install it from <a href="https://tortoisegit.org/download/" title="Tortoise">here</a>.</li>
+<li>Make sure you have created your public and private keys and your public key was attached in PaaS Portal to your user.</li>
 </ul>
-<p><img src="images/download-content.png" alt="download content"></p>
-<h1 id="push-files-to-sandbox">Push files to Sandbox</h1>
-<p>The steps below will describe the way we can use the Git client to push files to the repository. This will be done using an example, but the same process can be applied to any file what we want to push in any folder from the Repository.</p>
-<p>This example will show how to import a local database file to the Sandbox (Cloud Environment). For the H2 database to be imported correctly in the Cloud Environment, there are some conventions that need to be applied:</p>
-<ul>
-<li>User is t24 and password is t24 for the h2 database</li>
-<li>Database file name needs to be “TAFJDB.h2.db” – case sensitive.</li>
-<li>File needs to be uploaded as a ZIP file, with the name “TAFJDB.ZIP” (case sensitive).</li>
-<li>If all the above conditions are satisfied, we just copy the TAFJDB.ZIP file to the database import location: “\corebanking\client_files\h2db”. Copy the file using explorer into this location. In this example is “C:\Repo\corebanking\client_files\h2db”:</li>
-</ul>
-<p><img src="images/db.png" alt="database"></p>
-<ul>
-<li>Open the Git Bash window. Change directory to the cloned Repo folder (/c/Repo/Corebanking). Type command “git status”. One file added or modified will be displayed:</li>
-</ul>
-<p><img src="images/git-status.png" alt="git status"></p>
-<ul>
-<li>We need to add the file to the commit list. This is done using the command “git add <files>”. Type “git add  client_files/h2db/TAFJDB.zip”:</files></li>
-</ul>
-<p><img src="images/git-add.png" alt="git add"></p>
-<p><img src="images/git-confirm.png" alt="git confirm"></p>
-<ul>
-<li>We need to commit the changes and push to Repository. The command is “git commit -m <message text="">”:</message></li>
-</ul>
-<p><img src="images/git-commit.png" alt="git commit"></p>
-<ul>
-<li>Push the changes and type “git push”:</li>
-</ul>
-<p><img src="images/git-push.png" alt="git push"></p>
-<ul>
-<li>Changes were uploaded to the Repository. An automatic script is starting in background to update the Sandbox.</li>
-</ul>
-<h1 id="repository-folder-structure-and-description">Repository folder structure and description</h1>
+<p>•   Create a folder somewhere in your local machine. In the current example, a folder name GitLabRepo is used.</p>
+<p>•   Go to the GitLabRepo folder. Right click inside the folder and choose <strong>Git Clone</strong>.</p>
+<p><img src="images/gitlab_repo_clone1.png" alt="gitlab repo clone1"></p>
+<p>•   Paste the Endpoint of <strong>Repository</strong> Application of your sandbox in URL textbox and make sure that the Directory textbox is set to your GitLab repo folder(GitLabRepo folder in our example) and that you load your private key.</p>
+<p><img src="images/gitlab_repo_clone2.png" alt="gitlab repo clone2"></p>
+<p>•   Content is downloaded from the GitLab Repository of your sandbox to your computer.</p>
+<p><img src="images/gitlab_repo_clone3.png" alt="gitlab repo clone3"></p>
+<p>•   The GitLab repository structure on your computer should look like this:</p>
+<p><img src="images/gitlab_repo_struc.png" alt="gitlab repo structure"></p>
+<h1 id="gitlab-repository-folder-structure-and-description">GitLab Repository folder structure and description</h1>
 <table>
 <thead>
 <tr>
@@ -153,7 +126,7 @@
 </tr>
 </tbody>
 </table>
-</url></url></article>
+</article>
           </div>
           
           <div class="hidden-sm col-md-2" role="complementary">
