--- a/home/docstore/techguides/t24-development.html
+++ b/home/docstore/techguides/t24-development.html
@@ -91,7 +91,7 @@ This package is adapted according to the T24 version of your sandbox and it is p
 <li>in <em>tafj.properties</em> from Your_DEV_Path\TAFJ\conf, update lines 13, 26 and 42 based on Your_DEV_Path.</li>
 <li>if a project already exists in your DesignStudio workspace, in <em>Launch T24 Packager (TAFJ).launch</em> file from Your_DEV_Path\DesignStudio\workspace\YOUR-project-packager, lines 9, 10 and 11 must be updated accordingly to Your_Path.  </li>
 </ul>
-<p>To be able to interogate the sandbox database, a series of updates must be applied to <em>tafj.properties</em> file from Your_DEV_Path\TAFJ\conf:  </p>
+<p>To be able to interrogate the sandbox database, a series of updates must be applied to <em>tafj.properties</em> file from Your_DEV_Path\TAFJ\conf:  </p>
 <table>
 <thead>
 <tr>
@@ -144,7 +144,7 @@ This package is adapted according to the T24 version of your sandbox and it is p
 <img src="images/hostname.png" alt="hostname"></li>
 </ul>
 <h1 id="toggle-project-to-tafj-project-nature">Toggle Project to TAFJ project nature</h1>
-<p>The <strong>Toggle TAFJ project nature</strong> action must be performed in order to be able to develop, compile and package jBC routines and to interogate your sandbox database.  </p>
+<p>The <strong>Toggle TAFJ project nature</strong> action must be performed in order to be able to develop, compile and package jBC routines and to interrogate your sandbox database.  </p>
 <ul>
 <li>Right click on <strong>data-code</strong> module and choose <strong>Toggle TAFJ project nature</strong>.<br><img src="images/tafj-toggle-1.png" alt="tafj toggle 1">  </li>
 <li>In the next screen, import <em>tafj_properties</em> from Your_DEV_Path/TAFJ/conf folder, choose TAFJ_HOME as Your_DEV_Path/TAFJ folder and click <strong>Next</strong>. In the bellow picture, DEV_Path is set to C:\TemenosDEV.
