--- a/home/toc.html
+++ b/home/toc.html
@@ -90,7 +90,7 @@
                           <a href="docstore/techguides/user-creation-in-paas.html" name="" title="User Creation In PaaS">User Creation In PaaS</a>
                         </li>
                         <li>
-                          <a href="docstore/techguides/use-gitlab-repository.html" name="" title="Use Gitlab Repository">Use Gitlab Repository</a>
+                          <a href="docstore/techguides/use-gitlab-repository.html" name="" title="Use GitLab Repository">Use GitLab Repository</a>
                         </li>
                         <li>
                           <a href="docstore/techguides/t24-development.html" name="" title="T24 Development">T24 Development</a>
