--- a/home/temenos-cloud-templates.html
+++ b/home/temenos-cloud-templates.html
@@ -73,14 +73,16 @@
             <article class="content wrap" id="_content" data-uid="">
 <h2 id="how-temenos-cloud-templates-work"><strong>How Temenos Cloud Templates Work?</strong></h2>
 
-<p>The Temenos PaaS platform has the capability to provision environments in a variety of different configurations.  This capability is driven through the concept of &#39;Templates&#39; - a simplified view of the constituent elements which make up a sandbox configuration, including:</p>
+<p>The Temenos PaaS platform has the capability to provision environments in a variety of different configurations. This capability is driven through the concept of &#39;Templates&#39; - a simplified view of the constituent elements which make up a sandbox configuration, including:</p>
 <ul>
 <li>Server Size</li>
 <li>Basic server setup and technology stack</li>
 <li>T24 version to deploy</li>
 </ul>
-<p>By default, new templates are added with each monthly release of T24. These templates follow a standard pattern, configuration and technology stack, but with the most recent releases of T24 being deployed.</p>
-<p>However, the Temenos PaaS platform team also offer the ability to create customised templates for clients.  For more information, please contact temenoscloud@temenos.com.</p>
+<p>Templates are used by the provisioning service to create Sandbox environments with the desired configuration, as shown below:</p>
+<p><img src="images/sandbox-templates.png" alt=""></p>
+<p>By default, new Templates are added with each monthly release of T24. These Templates follow a standard pattern, configuration and technology stack, but with the most recent releases of T24 being deployed.</p>
+<p>However, the Temenos PaaS platform team also offer the ability to create customised Templates for clients. For more information, please contact temenoscloud@temenos.com.</p>
 <p><br></p>
               <hr>
               
