--- a/home/overview.html
+++ b/home/overview.html
@@ -76,7 +76,7 @@
 <h2 id="devx"><strong>DevX</strong></h2>
 <hr>
 <h3 id="what-is-temenos-devx-platform">What is Temenos DevX Platform?</h3>
-<p>“DevX” is a cloud based infrastructure for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand. DevX enables you to create Environments, i.e. Temenos Suites on-demand, for non-production use in the cloud.  Environments can be requested and provisioned within minutes rather than weeks helping you accelerate your projects. Retail Suite is readily available, with all other Temenos Suites (Corporate, Wealth, Micro-Finance and Islamic Banking) available on request and allow you to develop and test your proof of concept, share development environments across dispersed teams, replicate production environments or use them for training. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity.</p>
+<p>“DevX” is a cloud based infrastructure for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand<a href="what-is-devx.html"><strong>... see more</strong></a></p>
 <h3 id="what-is-temenos-paas">What is Temenos PaaS?</h3>
 <p>Temenos PaaS is a type of cloud service offered by Temenos Cloud; it is a <em>Platform as a Service (PaaS)</em> that provides individuals and teams with the ability to manage and configure their own instances of Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem.</p>
 <h2 id="features"><strong>Features</strong></h2>
